--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -109,6 +109,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\AirPlane.cpp" />
     <ClCompile Include="source\BaseChara.cpp" />
     <ClCompile Include="source\BaseBullet.cpp" />
     <ClCompile Include="source\Event_Coin.cpp" />
@@ -185,6 +186,7 @@
     <ClCompile Include="source\Wipe.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\AirPlane.h" />
     <ClInclude Include="source\BaseChara.h" />
     <ClInclude Include="source\BaseBullet.h" />
     <ClInclude Include="source\Event_Coin.h" />
