バレット更新

--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -112,19 +112,20 @@
     <ClCompile Include="source\AirPlane.cpp" />
     <ClCompile Include="source\BaseChara.cpp" />
     <ClCompile Include="source\BaseBullet.cpp" />
+    <ClCompile Include="source\BasePirateBullet.cpp" />
     <ClCompile Include="source\Curtain.cpp" />
     <ClCompile Include="source\Event_Coin.cpp" />
     <ClCompile Include="source\Event_Jamming.cpp" />
     <ClCompile Include="source\Event_Mission.cpp" />
     <ClCompile Include="source\Pirate.cpp" />
-    <ClCompile Include="source\Pirate_Bullet01.cpp" />
-    <ClCompile Include="source\Pirate_Bullet02.cpp" />
-    <ClCompile Include="source\Pirate_Bullet03.cpp" />
+    <ClCompile Include="source\PirateBullet01.cpp" />
+    <ClCompile Include="source\PirateBullet02.cpp" />
+    <ClCompile Include="source\PirateBullet03.cpp" />
     <ClCompile Include="source\Pirate_CPU.cpp" />
-    <ClCompile Include="source\Squirrel_Bullet01.cpp" />
+    <ClCompile Include="source\SquirrelBullet01.cpp" />
     <ClCompile Include="source\Stage.cpp" />
     <ClCompile Include="source\StageManager.cpp" />
-    <ClCompile Include="source\Thief_Bullet01.cpp" />
+    <ClCompile Include="source\ThiefBullet01.cpp" />
     <ClCompile Include="source\BulletManager.cpp" />
     <ClCompile Include="source\Camera.cpp" />
     <ClCompile Include="source\CharacterManager.cpp" />
@@ -173,9 +174,9 @@
     <ClCompile Include="IEX\IEX_View.cpp" />
     <ClCompile Include="source\textLoader.cpp" />
     <ClCompile Include="source\Thief.cpp" />
-    <ClCompile Include="source\Thief_Bullet02.cpp" />
-    <ClCompile Include="source\Thief_Bullet03.cpp" />
-    <ClCompile Include="source\Thief_Bullet04.cpp" />
+    <ClCompile Include="source\ThiefBullet02.cpp" />
+    <ClCompile Include="source\ThiefBullet03.cpp" />
+    <ClCompile Include="source\ThiefBullet04.cpp" />
     <ClCompile Include="source\Thief_CPU.cpp" />
     <ClCompile Include="source\UI.cpp" />
     <ClCompile Include="source\Wipe.cpp" />
@@ -184,21 +185,22 @@
     <ClInclude Include="source\AirPlane.h" />
     <ClInclude Include="source\BaseChara.h" />
     <ClInclude Include="source\BaseBullet.h" />
+    <ClInclude Include="source\BasePirateBullet.h" />
     <ClInclude Include="source\Curtain.h" />
     <ClInclude Include="source\Define.h" />
     <ClInclude Include="source\Event_Coin.h" />
     <ClInclude Include="source\Event_Jamming.h" />
     <ClInclude Include="source\Event_Mission.h" />
     <ClInclude Include="source\Pirate.h" />
-    <ClInclude Include="source\Pirate_Bullet01.h" />
-    <ClInclude Include="source\Pirate_Bullet02.h" />
-    <ClInclude Include="source\Pirate_Bullet03.h" />
+    <ClInclude Include="source\PirateBullet01.h" />
+    <ClInclude Include="source\PirateBullet02.h" />
+    <ClInclude Include="source\PirateBullet03.h" />
     <ClInclude Include="source\Pirate_CPU.h" />
-    <ClInclude Include="source\Squirrel_Bullet01.h" />
+    <ClInclude Include="source\SquirrelBullet01.h" />
     <ClInclude Include="source\Stage.h" />
     <ClInclude Include="source\StageManager.h" />
-    <ClInclude Include="source\Thief_Bullet04.h" />
-    <ClInclude Include="source\Thief_Bullet01.h" />
+    <ClInclude Include="source\ThiefBullet04.h" />
+    <ClInclude Include="source\ThiefBullet01.h" />
     <ClInclude Include="source\BulletManager.h" />
     <ClInclude Include="source\Camera.h" />
     <ClInclude Include="source\CharacterManager.h" />
@@ -232,8 +234,8 @@
     <ClInclude Include="IEX\iextreme.h" />
     <ClInclude Include="source\textLoader.h" />
     <ClInclude Include="source\Thief.h" />
-    <ClInclude Include="source\Thief_Bullet02.h" />
-    <ClInclude Include="source\Thief_Bullet03.h" />
+    <ClInclude Include="source\ThiefBullet02.h" />
+    <ClInclude Include="source\ThiefBullet03.h" />
     <ClInclude Include="source\Thief_CPU.h" />
     <ClInclude Include="source\UI.h" />
     <ClInclude Include="source\Wipe.h" />
