--- a/IEX2010.vcxproj.filters
+++ b/IEX2010.vcxproj.filters
@@ -193,6 +193,9 @@
     <Filter Include="ソース ファイル\Bullet\PirateBullet\BasePirateBullet">
       <UniqueIdentifier>{0e21d244-f091-45ae-980d-20bc2ff1f783}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\UI\LifeUI">
+      <UniqueIdentifier>{d255de10-83d6-40c9-88af-c71fcff8824a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\system\Framework.cpp">
@@ -408,6 +411,9 @@
     <ClCompile Include="source\BasePirateBullet.cpp">
       <Filter>ソース ファイル\Bullet\PirateBullet\BasePirateBullet</Filter>
     </ClCompile>
+    <ClCompile Include="source\LifeUI.cpp">
+      <Filter>ソース ファイル\UI\LifeUI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\system\Framework.h">
@@ -580,6 +586,9 @@
     </ClInclude>
     <ClInclude Include="source\BasePirateBullet.h">
       <Filter>ソース ファイル\Bullet\PirateBullet\BasePirateBullet</Filter>
+    </ClInclude>
+    <ClInclude Include="source\LifeUI.h">
+      <Filter>ソース ファイル\UI\LifeUI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
