--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -113,6 +113,7 @@
     <ClCompile Include="source\BaseChara.cpp" />
     <ClCompile Include="source\BaseBullet.cpp" />
     <ClCompile Include="source\BasePirateBullet.cpp" />
+    <ClCompile Include="source\Crown.cpp" />
     <ClCompile Include="source\Curtain.cpp" />
     <ClCompile Include="source\Event_Coin.cpp" />
     <ClCompile Include="source\Event_Jamming.cpp" />
@@ -187,6 +188,7 @@
     <ClInclude Include="source\BaseChara.h" />
     <ClInclude Include="source\BaseBullet.h" />
     <ClInclude Include="source\BasePirateBullet.h" />
+    <ClInclude Include="source\Crown.h" />
     <ClInclude Include="source\Curtain.h" />
     <ClInclude Include="source\Define.h" />
     <ClInclude Include="source\Event_Coin.h" />
