--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -113,12 +113,16 @@
     <ClCompile Include="source\BaseChara.cpp" />
     <ClCompile Include="source\BaseBullet.cpp" />
     <ClCompile Include="source\BasePirateBullet.cpp" />
+    <ClCompile Include="source\CoinNumUI.cpp" />
+    <ClCompile Include="source\CoinUIEffect.cpp" />
     <ClCompile Include="source\Crown.cpp" />
     <ClCompile Include="source\Curtain.cpp" />
     <ClCompile Include="source\Event_Coin.cpp" />
     <ClCompile Include="source\Event_Jamming.cpp" />
     <ClCompile Include="source\Event_Mission.cpp" />
+    <ClCompile Include="source\FaceUI.cpp" />
     <ClCompile Include="source\LifeUI.cpp" />
+    <ClCompile Include="source\NumberUI.cpp" />
     <ClCompile Include="source\Pirate.cpp" />
     <ClCompile Include="source\PirateBullet01.cpp" />
     <ClCompile Include="source\PirateBullet02.cpp" />
@@ -188,13 +192,17 @@
     <ClInclude Include="source\BaseChara.h" />
     <ClInclude Include="source\BaseBullet.h" />
     <ClInclude Include="source\BasePirateBullet.h" />
+    <ClInclude Include="source\CoinNumUI.h" />
+    <ClInclude Include="source\CoinUIEffect.h" />
     <ClInclude Include="source\Crown.h" />
     <ClInclude Include="source\Curtain.h" />
     <ClInclude Include="source\Define.h" />
     <ClInclude Include="source\Event_Coin.h" />
     <ClInclude Include="source\Event_Jamming.h" />
     <ClInclude Include="source\Event_Mission.h" />
+    <ClInclude Include="source\FaceUI.h" />
     <ClInclude Include="source\LifeUI.h" />
+    <ClInclude Include="source\NumberUI.h" />
     <ClInclude Include="source\Pirate.h" />
     <ClInclude Include="source\PirateBullet01.h" />
     <ClInclude Include="source\PirateBullet02.h" />
