--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="source\Event_Mission.cpp" />
     <ClCompile Include="source\FaceUI.cpp" />
     <ClCompile Include="source\FallLife.cpp" />
+    <ClCompile Include="source\LastResult.cpp" />
     <ClCompile Include="source\LifeUI.cpp" />
     <ClCompile Include="source\NumberUI.cpp" />
     <ClCompile Include="source\Pirate.cpp" />
@@ -130,6 +131,7 @@
     <ClCompile Include="source\PirateBullet03.cpp" />
     <ClCompile Include="source\Pirate_CPU.cpp" />
     <ClCompile Include="source\PlayerNumUI.cpp" />
+    <ClCompile Include="source\Result.cpp" />
     <ClCompile Include="source\SquirrelBullet01.cpp" />
     <ClCompile Include="source\Stage.cpp" />
     <ClCompile Include="source\ThiefBullet01.cpp" />
@@ -200,6 +202,7 @@
     <ClInclude Include="source\Event_Mission.h" />
     <ClInclude Include="source\FaceUI.h" />
     <ClInclude Include="source\FallLife.h" />
+    <ClInclude Include="source\LastResult.h" />
     <ClInclude Include="source\LifeUI.h" />
     <ClInclude Include="source\NumberUI.h" />
     <ClInclude Include="source\Pirate.h" />
@@ -208,6 +211,7 @@
     <ClInclude Include="source\PirateBullet03.h" />
     <ClInclude Include="source\Pirate_CPU.h" />
     <ClInclude Include="source\PlayerNumUI.h" />
+    <ClInclude Include="source\Result.h" />
     <ClInclude Include="source\SquirrelBullet01.h" />
     <ClInclude Include="source\Stage.h" />
     <ClInclude Include="source\ThiefBullet04.h" />
